# vala-commander

./: .gitignore  Makefile.am  Makefile.in  configure.ac
src/: Makefile.am  appconfig.vala  vala_commander.vala
src/glade/: Makefile.in  main_window.ui
src/signals/: Makefile.in  signals_window_menu.vala
src/ui/: menu.vala  toolbutton_fixed.vala
